create hero section in home.jsx and style the title

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
+/* Google Font */
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
+
+/* General */
+
+#root {
+    font-family: 'Roboto Mono';
+}
