complete home page with buttons restyle and first draw of about page

--- a/src/components/NavTabs.css
+++ b/src/components/NavTabs.css
@@ -1,6 +1,6 @@
 .nav {
     justify-content: end;
-    background-color: #483d71;
+    background-color: #020c31;
     --bs-nav-link-color: whitesmoke !important;
 }
 
