--- a/src/components/pages/styles/Home.css
+++ b/src/components/pages/styles/Home.css
@@ -1,18 +1,20 @@
 .hero {
-    height: 100vh;
     text-align: center;
-    background-image: url(../../../images/bg-hero.jpg);
+    color: whitesmoke;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 100px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
 }
 
-.btn-links {
+.title-home {
+    padding-top: 100px;
+}
+
+.button-links {
     padding: 90px 0;
     display: flex;
     flex-direction: row;
@@ -20,21 +22,29 @@
     justify-content: start;
 }
 
-.btn {
-    background-color: rgba(72, 61, 113, 0.5);
-    color: whitesmoke;
-    font-size: x-large !important;
+.button {
+    text-decoration: none;
+    background-color: rgba(136, 136, 138, 0.2);
+    color: rgba(136, 136, 138, 0.0);
     text-align: center;
+    padding: 15px;
     margin: 40px;
     height: 150px;
     width: 200px;
-    border-radius: 15px;
+    border-radius: 20px !important;
 }
 
-.btn:hover {
-    background-color: rgba(72, 61, 113, 0.8);
+.button:hover {
+    background-color: rgba(136, 136, 138, 0.5);
+    border: #c2c045 2px solid;
+    color: #c2c045;
 }
 
-.btn i {
-    font-size: 70px;
+.button i {
+    color: #c2c045 !important;
+    font-size: 55px;
+    margin: 25px;
 }
+
+
+
