complete portfolio page and add skill section in about page

--- a/src/components/pages/styles/About.css
+++ b/src/components/pages/styles/About.css
@@ -22,3 +22,23 @@
 .text p {
     padding: 20px 40px;
 }
+
+.text h4 {
+    padding-left: 40px;
+    font-weight: bold;
+}
+
+.text hr {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.text ul {
+    list-style: none;
+    padding: 20px 40px;
+}
+
+.text li {
+    margin-top: 10px;
+    border-bottom: solid 1px whitesmoke;
+}
