--- a/src/components/pages/styles/About.css
+++ b/src/components/pages/styles/About.css
@@ -10,13 +10,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: center;
     padding-top: 20px;
+}
+
+.title-about a {
+    text-decoration: none;
 }
 
 .text {
     font-size: smaller;
-    border-left: solid 2px whitesmoke;
 }
 
 .text p {
