--- a/src/components/pages/styles/About.css
+++ b/src/components/pages/styles/About.css
@@ -7,15 +7,16 @@
 }
 
 .title-about {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
     padding-top: 20px;
 }
 
 .title-about a {
     text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .text {
